--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,32 +2,38 @@ version: '3.8'  # pode remover se quiser, conforme aviso do Compose
 
 services:
   PFS-DB-CORE:
-    image: postgres:15
+    image: postgres:17
     container_name: PFS-DB-CORE 
     environment: 
-      POSTGRES_USER: pfsuser
-      POSTGRES_PASSWORD: pfspassword
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: admin
       POSTGRES_DB: PFS-DB-CORE
     ports:
       - "5432:5432"
     volumes:
-      - ./DB/data/core/db-core:/var/lib/postgresql/data
-      - ./DB/dump-core-PFS-CORE-202507191228.sql:/docker-entrypoint-initdb.d/init-schema.sql
+      - ./DB/data/core:/var/lib/postgresql/data
+      - ./DB/dump-core-PFS-CORE.dump:/restore/dump-core-PFS-CORE.dump
+      - ./DB/restore-core.sh:/docker-entrypoint-initdb.d/restore-core.sh
     restart: unless-stopped
+    networks:
+      - pfs-network
 
   PFS-DB-MG:
-    image: postgres:15
+    image: postgres:17
     container_name: PFS-DB-MG
     environment: 
-      POSTGRES_USER: pfsuser2
-      POSTGRES_PASSWORD: pfspassword2
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: admin
       POSTGRES_DB: PFS-DB-MG
     ports:
       - "5433:5432"
     volumes:
-      - ./DB/data/mg/db-mg:/var/lib/postgresql/data
-      - ./DB/dump-mg-PFS-MG-202507191228.sql:/docker-entrypoint-initdb.d/init-schema.sql
+      - ./DB/data/mg:/var/lib/postgresql/data
+      - ./DB/dump-core-PFS-MG.dump:/restore/dump-core-PFS-MG.dump
+      - ./DB/restore-mg.sh:/docker-entrypoint-initdb.d/restore-mg.sh
     restart: unless-stopped
+    networks:
+      - pfs-network
 
   frontend:
     build:
@@ -37,6 +43,8 @@ services:
     depends_on:
       - api
     restart: unless-stopped
+    networks:
+      - pfs-network
 
   api:
     build:
@@ -49,6 +57,12 @@ services:
       - PFS-DB-MG
     environment:
       ASPNETCORE_URLS: http://+:3190
-      ConnectionStringCore: Host=PFS-DB-CORE;Port=5432;Database=PFS-DB-CORE;Username=pfsuser;Password=pfspassword
-      ConnectionStringMG: Host=PFS-DB-MG;Port=5432;Database=PFS-DB-MG;Username=pfsuser2;Password=pfspassword2
+      ConnectionStringCore: Host=PFS-DB-CORE;Port=5432;Database=PFS-DB-CORE;Username=postgres;Password=admin
+      ConnectionStringMG: Host=PFS-DB-MG;Port=5432;Database=PFS-DB-MG;Username=postgres;Password=admin
     restart: unless-stopped
+    networks:
+      - pfs-network
+
+networks:
+  pfs-network:
+    external: true
